fix error not showing search results
fix cover not found, fix click on game title going to wronge route

--- a/styles/Search.module.scss
+++ b/styles/Search.module.scss
@@ -49,6 +49,15 @@
               cursor: pointer;
           }
       }
+      .notfound {
+        width: min(30vw, 250px);
+        height: min(40vw, 300px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2em;
+        cursor: pointer;
+      }
   }
 }
 
@@ -82,6 +91,10 @@
                     filter: brightness(1.3);
                     transform: scale(1.02);
                 }
+            }
+            .notfound {
+                width: min(15vw, 125px);
+                height: min(20vw, 150px);
             }
         
             .infos  {
